RESOLVED FIXED134270
[Fullscreen][Mac] WKView is not firstResponder after entering fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=134270
Summary [Fullscreen][Mac] WKView is not firstResponder after entering fullscreen mode
Jer Noble
Reported 2014-06-24 14:56:10 PDT
[Fullscreen][Mac] WKView is not firstResponder after entering fullscreen mode
Attachments
Patch (1.92 KB, patch)
2014-06-24 14:58 PDT, Jer Noble
jhoneycutt: review+
Jer Noble
Comment 1 2014-06-24 14:58:05 PDT
Jon Honeycutt
Comment 2 2014-06-24 15:01:50 PDT
Comment on attachment 233745 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=233745&action=review r=me > Source/WebCore/ChangeLog:10 > + the window's view heirarchy after the style changes, reset it to the firstResponder. hierarchy > Source/WebCore/platform/mac/WebCoreFullScreenWindow.mm:81 > +- (void)setStyleMask:(NSUInteger)styleMask > +{ > + NSResponder* savedFirstResponder = [self firstResponder]; > + > + [super setStyleMask:styleMask]; > + > + if ([self firstResponder] != savedFirstResponder > + && [savedFirstResponder isKindOfClass:[NSView class]] > + && [(NSView*)savedFirstResponder isDescendantOf:[self contentView]]) > + [self makeFirstResponder:savedFirstResponder]; > +} This would benefit from an inline comment explaining why it's done.
Jer Noble
Comment 3 2014-06-24 15:32:28 PDT
Jer Noble
Comment 4 2014-06-24 15:39:07 PDT
Note You need to log in before you can comment on or make changes to this bug.