[Fullscreen][Mac] WKView is not firstResponder after entering fullscreen mode https://bugs.webkit.org/show_bug.cgi?id=134270

Reviewed by Jon Honeycutt.

The WebCoreFullScreenWindow's firstResponder is reset when the full screen animation completes and
the window's style is changed to a fullscreen style. Save the firstResponder, and if it's still in
the window's view hierarchy after the style changes, reset it to the firstResponder.

* platform/mac/WebCoreFullScreenWindow.mm:
(-[WebCoreFullScreenWindow setStyleMask:]):

Canonical link: https://commits.webkit.org/152249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170397 268f45cc-cd09-0410-ab3c-d52691b4dbfc